--- a/UTBEShop/Areas/Customer/Views/BasketItems/CustomerBasket.cshtml
+++ b/UTBEShop/Areas/Customer/Views/BasketItems/CustomerBasket.cshtml
@@ -24,7 +24,7 @@
                     <div>
                       <p>@Model.Items[i].product.ProductType</p>
                       <h5>@Model.Items[i].product.ProductName</h5>
-                      <p>@Model.Items[i].product.ProductDescription.Substring(0,20)</p>
+                      <p>@Model.Items[i].product.ProductDescription</p>
                     </div>
                   </div>
 
