Style modifications + Cart bug fixing

--- a/UTBEShop/Views/Home/Index.cshtml
+++ b/UTBEShop/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <section class="welcomeSection">
         <aside class="utbImage"><img src="/img/utbImage.jpg" /></aside>
         <article class="shoptIntroduction">
-            <h2>UTB Shope  :</h2>
+            <h2>MAY EShope  :</h2>
             <h3 id="descriptionShop"></h3>
             <div class="buttonVisit" id="buttonVisit"><a href="https://new.be.utb.cz/?lang=en" target="_blank">Visit UTB Shop</a></div>
         </article>
